refactor: Enhance application configuration and error handling, improve email logging, and optimize course availability checks