@@ -11,7 +11,10 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import jakarta.annotation.PostConstruct;
+
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -21,25 +24,28 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class AdminService {
-    
+
     private final UserRepository userRepository;
     private final WatchedClassRepository watchedClassRepository;
     private final EmailService emailService;
-    
+
     @Value("${admin.emails:}")
     private String adminEmails;
-    
-    public boolean isAdmin(String email) {
-        if (adminEmails == null || adminEmails.trim().isEmpty()) {
-            return false;
+
+    private Set<String> adminEmailSet = Collections.emptySet();
+
+    @PostConstruct
+    void initAdminEmails() {
+        if (adminEmails != null && !adminEmails.isBlank()) {
+            adminEmailSet = Arrays.stream(adminEmails.split(","))
+                    .map(String::trim)
+                    .map(String::toLowerCase)
+                    .collect(Collectors.toUnmodifiableSet());
         }
-        
-        Set<String> adminEmailSet = Arrays.stream(adminEmails.split(","))
-                .map(String::trim)
-                .map(String::toLowerCase)
-                .collect(Collectors.toSet());
-        
-        return adminEmailSet.contains(email.toLowerCase());
+    }
+
+    public boolean isAdmin(String email) {
+        return email != null && adminEmailSet.contains(email.toLowerCase());
     }
     
     public List<UserSearchResponse> searchUsers(String searchTerm) {
